--- a/TelegramNL_No_Resolve.yaml
+++ b/TelegramNL_No_Resolve.yaml
@@ -1,4 +1,4 @@
-# NAME: TelegramNL
+# NAME: TelegramNL_No_Resolve
 payload:
   - IP-CIDR,149.154.160.0/20,no-resolve
   - IP-CIDR,91.108.4.0/22,no-resolve
