--- a/TelegramNL_No_Resolve.yaml
+++ b/TelegramNL_No_Resolve.yaml
@@ -5,3 +5,9 @@ payload:
   - IP-CIDR,91.108.8.0/22,no-resolve
   - IP-CIDR6,2001:67c:4e8::/48,no-resolve
   - IP-CIDR6,2001:b28:f23c::/48,no-resolve
+  - IP-CIDR,109.239.140.0/24,no-resolve
+  - IP-CIDR,5.28.192.0/18,no-resolve
+  - IP-CIDR,91.108.0.0/16,no-resolve
+  - IP-CIDR6,2001:67c:4e8::/48,no-resolve
+  - IP-CIDR6,2001:b28:f23f::/48,no-resolve
+  - IP-CIDR6,2a0a:f280::/29,no-resolve
