--- a/TelegramNL_No_Resolve.yaml
+++ b/TelegramNL_No_Resolve.yaml
@@ -1,6 +1,8 @@
 # NAME: TelegramNL_No_Resolve
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TelegramNL/TelegramNL_No_Resolve.yaml
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram_No_Resolve.yaml
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TelegramUS/TelegramUS_No_Resolve.yaml
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TelegramSG/TelegramSG_No_Resolve.yaml
 payload:
   - IP-CIDR,149.154.160.0/20,no-resolve
   - IP-CIDR,91.108.4.0/22,no-resolve
@@ -13,3 +15,8 @@ payload:
   - IP-CIDR6,2001:67c:4e8::/48,no-resolve
   - IP-CIDR6,2001:b28:f23f::/48,no-resolve
   - IP-CIDR6,2a0a:f280::/29,no-resolve
+  - IP-CIDR,91.108.16.0/22,no-resolve
+  - IP-CIDR,91.108.56.0/22,no-resolve
+  - IP-CIDR6,2001:b28:f23f::/48,no-resolve
+  - IP-CIDR,91.108.12.0/22,no-resolve
+  - IP-CIDR6,2001:b28:f23d::/48,no-resolve
