--- a/NetEaseDomain.yaml
+++ b/NetEaseDomain.yaml
@@ -1,6 +1,18 @@
 # NAME: NetEase
 # https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Clash/NetEase/NetEase_No_Resolve.yaml
 payload:
+# NetEaseMusic
+  - DOMAIN,netease.ugcvideoss.ourdvs.com
+  - DOMAIN-SUFFIX,163yun.com
+  - DOMAIN-SUFFIX,api.iplay.163.com
+  - DOMAIN-SUFFIX,hz.netease.com
+  - DOMAIN-SUFFIX,mam.netease.com
+  - DOMAIN-SUFFIX,music.126.com
+  - DOMAIN-SUFFIX,music.126.net
+  - DOMAIN-SUFFIX,music.163.com
+  - DOMAIN-SUFFIX,music.163.com.163jiasu.com
+  - DOMAIN-SUFFIX,yun-app.net
+# NetEase
   - DOMAIN,netease.ugcvideoss.ourdvs.com
   - DOMAIN-SUFFIX,126.am
   - DOMAIN-SUFFIX,126.com
