--- a/NetEaseIP.yaml
+++ b/NetEaseIP.yaml
@@ -49,3 +49,6 @@ payload:
   - IP-CIDR,59.111.19.33/32,no-resolve
   - IP-CIDR,59.111.21.14/31,no-resolve
   - IP-CIDR,59.111.238.29/32,no-resolve
+  - IP-CIDR,59.111.19.33/32,no-resolve
+  - IP-CIDR,59.111.21.14/31,no-resolve
+  - IP-CIDR,59.111.238.29/32,no-resolve
