--- a/BANList.yaml
+++ b/BANList.yaml
@@ -1,18 +1,13 @@
 # Some Websites Needed Proxy Chain
 payload:
-  - DOMAIN-KEYWORD,epochtimes
   - DOMAIN-SUFFIX,epochtimes.com
-  - DOMAIN-KEYWORD,falundafa
   - DOMAIN-SUFFIX,falundafa.org
-  - DOMAIN-KEYWORD,minghui
   - DOMAIN-SUFFIX,minghui.org
-  - DOMAIN-KEYWORD,ntdtv
   - DOMAIN-SUFFIX,ntdtv.com
-  - DOMAIN-KEYWORD,voachinese
   - DOMAIN-SUFFIX,voachinese.com
   - DOMAIN-SUFFIX,voanews.com
   - DOMAIN-SUFFIX,voacantonese.com
   - DOMAIN-SUFFIX,insidevoa.com
   - DOMAIN-SUFFIX,voa.gov
-
-
+  - DOMAIN-SUFFIX,bannedbook.org
+  - DOMAIN-SUFFIX,disqus.com
