--- a/BANList.yaml
+++ b/BANList.yaml
@@ -10,5 +10,9 @@ payload:
   - DOMAIN-SUFFIX,insidevoa.com
   - DOMAIN-SUFFIX,voa.gov
   - DOMAIN-SUFFIX,bannedbook.org
+  - DOMAIN-SUFFIX,rfa.org
   - DOMAIN-SUFFIX,disqus.com
   - DOMAIN-SUFFIX,pincong.rocks
+  - DOMAIN-SUFFIX,pincong.net
+  - DOMAIN-SUFFIX,reddit.com
+
