--- a/BANList.yaml
+++ b/BANList.yaml
@@ -15,4 +15,6 @@ payload:
   - DOMAIN-SUFFIX,pincong.rocks
   - DOMAIN-SUFFIX,pincong.net
   - DOMAIN-SUFFIX,reddit.com
+  - DOMAIN-SUFFIX, gov.tw
+
 
