--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -1,60 +1,60 @@
 payload:
   # 内网直连
-  - DOMAIN-SUFFIX,local,DIRECT
-  - IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
-  - IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
-  - IP-CIDR,172.16.0.0/12,DIRECT,no-resolve
-  - IP-CIDR,127.0.0.0/8,DIRECT,no-resolve
-  - IP-CIDR,100.64.0.0/10,DIRECT,no-resolve
+  - DOMAIN-SUFFIX,local
+  - IP-CIDR,192.168.0.0/16,no-resolve
+  - IP-CIDR,10.0.0.0/8,no-resolve
+  - IP-CIDR,172.16.0.0/12,no-resolve
+  - IP-CIDR,127.0.0.0/8,no-resolve
+  - IP-CIDR,100.64.0.0/10,no-resolve
   # 其他直连
-  - DOMAIN-KEYWORD,cctv,DIRECT
-  - DOMAIN-KEYWORD,cntv,DIRECT
-  - DOMAIN-KEYWORD,chinalive,DIRECT
-  - DOMAIN-KEYWORD,csdn,DIRECT
-  - DOMAIN-SUFFIX,cnblogs.com,DIRECT
-  - DOMAIN-SUFFIX,china-cba.net,DIRECT
-  - DOMAIN-SUFFIX,baidu.com,DIRECT
-  - DOMAIN-SUFFIX,landiannews.com,DIRECT
-  - DOMAIN-SUFFIX,douyin.com,DIRECT
-  - DOMAIN-SUFFIX,eastmoney.com,DIRECT
-  - DOMAIN-SUFFIX,pingan.com,DIRECT
-  - DOMAIN-SUFFIX,cmbchina.com,DIRECT
-  - DOMAIN-SUFFIX,psbc.com,DIRECT
-  - DOMAIN-SUFFIX,cibhk.com,DIRECT
-  - DOMAIN-SUFFIX,bankcomm.com,DIRECT
-  - DOMAIN-SUFFIX,citicbank.com,DIRECT
-  - DOMAIN-SUFFIX,czbank.com,DIRECT
-  - DOMAIN-SUFFIX,cebbank.com,DIRECT
-  - DOMAIN-SUFFIX,abchina.com,DIRECT
-  - DOMAIN-SUFFIX,ccb.com,DIRECT
-  - DOMAIN-SUFFIX,yinhangzhaopin.com,DIRECT
-  - DOMAIN-SUFFIX,spacechina.com,DIRECT
-  - DOMAIN-SUFFIX,iguopin.com,DIRECT
-  - DOMAIN-SUFFIX,china-cdt.com,DIRECT
-  - DOMAIN-SUFFIX,chinasatcom.com,DIRECT
-  - DOMAIN-SUFFIX,cfhi.com,DIRECT
-  - DOMAIN-SUFFIX,harbin-electric.com,DIRECT
-  - DOMAIN-SUFFIX,dongfang.com,DIRECT
-  - DOMAIN-SUFFIX,baowugroup.com,DIRECT
-  - DOMAIN-SUFFIX,cmr-co.com,DIRECT
-  - DOMAIN-SUFFIX,airchinagroup.com,DIRECT
-  - DOMAIN-SUFFIX,coscoshipping.com,DIRECT
-  - DOMAIN-SUFFIX,ceairgroup.com,DIRECT
-  - DOMAIN-SUFFIX,sinochem.com,DIRECT
-  - DOMAIN-SUFFIX,cofco.com,DIRECT
-  - DOMAIN-SUFFIX,ccic.com,DIRECT
-  - DOMAIN-SUFFIX,namkwong.com.mo,DIRECT
-  - DOMAIN-SUFFIX,chinaoct.com,DIRECT
-  - DOMAIN-SUFFIX,chinagoldgroup.com,DIRECT
-  - DOMAIN-SUFFIX,cnaf.com,DIRECT
-  - DOMAIN-SUFFIX,xxcig.com,DIRECT
-  - DOMAIN-SUFFIX,sinopharm.com,DIRECT
-  - DOMAIN-SUFFIX,cict.com,DIRECT
-  - DOMAIN-SUFFIX,crecg.com,DIRECT
-  - DOMAIN-SUFFIX,crrcgc.cc,DIRECT
-  - DOMAIN-SUFFIX,bgrimm.com,DIRECT
-  - DOMAIN-SUFFIX,weixin.qq.com,DIRECT
-  - DOMAIN-SUFFIX,grinm.com,DIRECT
-  - DOMAIN-SUFFIX,chinacoal.com,DIRECT
-  - DOMAIN-SUFFIX,comac.cc,DIRECT
-  - DOMAIN-SUFFIX,cn,DIRECT
+  - DOMAIN-KEYWORD,cctv
+  - DOMAIN-KEYWORD,cntv
+  - DOMAIN-KEYWORD,chinalive
+  - DOMAIN-KEYWORD,csdn
+  - DOMAIN-SUFFIX,cnblogs.com
+  - DOMAIN-SUFFIX,china-cba.net
+  - DOMAIN-SUFFIX,baidu.com
+  - DOMAIN-SUFFIX,landiannews.com
+  - DOMAIN-SUFFIX,douyin.com
+  - DOMAIN-SUFFIX,eastmoney.com
+  - DOMAIN-SUFFIX,pingan.com
+  - DOMAIN-SUFFIX,cmbchina.com
+  - DOMAIN-SUFFIX,psbc.com
+  - DOMAIN-SUFFIX,cibhk.com
+  - DOMAIN-SUFFIX,bankcomm.com
+  - DOMAIN-SUFFIX,citicbank.com
+  - DOMAIN-SUFFIX,czbank.com
+  - DOMAIN-SUFFIX,cebbank.com
+  - DOMAIN-SUFFIX,abchina.com
+  - DOMAIN-SUFFIX,ccb.com
+  - DOMAIN-SUFFIX,yinhangzhaopin.com
+  - DOMAIN-SUFFIX,spacechina.com
+  - DOMAIN-SUFFIX,iguopin.com
+  - DOMAIN-SUFFIX,china-cdt.com
+  - DOMAIN-SUFFIX,chinasatcom.com
+  - DOMAIN-SUFFIX,cfhi.com
+  - DOMAIN-SUFFIX,harbin-electric.com
+  - DOMAIN-SUFFIX,dongfang.com
+  - DOMAIN-SUFFIX,baowugroup.com
+  - DOMAIN-SUFFIX,cmr-co.com
+  - DOMAIN-SUFFIX,airchinagroup.com
+  - DOMAIN-SUFFIX,coscoshipping.com
+  - DOMAIN-SUFFIX,ceairgroup.com
+  - DOMAIN-SUFFIX,sinochem.com
+  - DOMAIN-SUFFIX,cofco.com
+  - DOMAIN-SUFFIX,ccic.com
+  - DOMAIN-SUFFIX,namkwong.com.mo
+  - DOMAIN-SUFFIX,chinaoct.com
+  - DOMAIN-SUFFIX,chinagoldgroup.com
+  - DOMAIN-SUFFIX,cnaf.com
+  - DOMAIN-SUFFIX,xxcig.com
+  - DOMAIN-SUFFIX,sinopharm.com
+  - DOMAIN-SUFFIX,cict.com
+  - DOMAIN-SUFFIX,crecg.com
+  - DOMAIN-SUFFIX,crrcgc.cc
+  - DOMAIN-SUFFIX,bgrimm.com
+  - DOMAIN-SUFFIX,weixin.qq.com
+  - DOMAIN-SUFFIX,grinm.com
+  - DOMAIN-SUFFIX,chinacoal.com
+  - DOMAIN-SUFFIX,comac.cc
+  - DOMAIN-SUFFIX,cn
