--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -59,4 +59,5 @@ payload:
   - DOMAIN-SUFFIX,grinm.com
   - DOMAIN-SUFFIX,chinacoal.com
   - DOMAIN-SUFFIX,comac.cc
+  - DOMAIN-SUFFIX,ajinga.com
   - DOMAIN-SUFFIX,cn
