--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -60,4 +60,5 @@ payload:
   - DOMAIN-SUFFIX,chinacoal.com
   - DOMAIN-SUFFIX,comac.cc
   - DOMAIN-SUFFIX,ajinga.com
+  - DOMAIN-SUFFIX,100chui.com
   - DOMAIN-SUFFIX,cn
