--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -61,4 +61,5 @@ payload:
   - DOMAIN-SUFFIX,comac.cc
   - DOMAIN-SUFFIX,ajinga.com
   - DOMAIN-SUFFIX,100chui.com
+  - DOMAIN-SUFFIX,ourl.co
   - DOMAIN-SUFFIX,cn
