--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -62,4 +62,5 @@ payload:
   - DOMAIN-SUFFIX,ajinga.com
   - DOMAIN-SUFFIX,100chui.com
   - DOMAIN-SUFFIX,ourl.co
+  - DOMAIN-SUFFIX,spdb.zhaopin.com
   - DOMAIN-SUFFIX,cn
