--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -12,11 +12,12 @@ payload:
   - DOMAIN-KEYWORD,chinalive
   - DOMAIN-KEYWORD,csdn
   - DOMAIN-KEYWORD,aliyun
+  - DOMAIN-KEYWORD,landian
   - DOMAIN-SUFFIX,alicdn.com
   - DOMAIN-SUFFIX,cnblogs.com
   - DOMAIN-SUFFIX,china-cba.net
   - DOMAIN-SUFFIX,baidu.com
-  - DOMAIN-SUFFIX,landiannews.com
+  - DOMAIN-SUFFIX,lancdn.com
   - DOMAIN-SUFFIX,douyin.com
   - DOMAIN-SUFFIX,eastmoney.com
   - DOMAIN-SUFFIX,pingan.com
