--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -64,4 +64,5 @@ payload:
   - DOMAIN-SUFFIX,100chui.com
   - DOMAIN-SUFFIX,ourl.co
   - DOMAIN-SUFFIX,spdb.zhaopin.com
+  - DOMAIN-SUFFIX,cdn.jsdelivr.net
   - DOMAIN-SUFFIX,cn
