--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -57,6 +57,7 @@ payload:
   - DOMAIN-SUFFIX,crrcgc.cc
   - DOMAIN-SUFFIX,bgrimm.com
   - DOMAIN-SUFFIX,weixin.qq.com
+  - DOMAIN-SUFFIX,wx.qq.com
   - DOMAIN-SUFFIX,grinm.com
   - DOMAIN-SUFFIX,chinacoal.com
   - DOMAIN-SUFFIX,comac.cc
