--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -67,5 +67,8 @@ payload:
   - DOMAIN-SUFFIX,spdb.zhaopin.com
   - DOMAIN-SUFFIX,cdn.jsdelivr.net
   - DOMAIN-SUFFIX,weibo.com
+  - DOMAIN-SUFFIX,hbooker.com
+  - DOMAIN-SUFFIX,kuangxiangit.com
+  - DOMAIN-SUFFIX,umengcloud.com
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
