--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -70,5 +70,7 @@ payload:
   - DOMAIN-SUFFIX,hbooker.com
   - DOMAIN-SUFFIX,kuangxiangit.com
   - DOMAIN-SUFFIX,umengcloud.com
+  - DOMAIN-SUFFIX,bankofchina.com
+  - DOMAIN-SUFFIX,bocamchina.com
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
