--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -75,5 +75,7 @@ payload:
   - DOMAIN-SUFFIX,bank-of-china.com
   - DOMAIN-SUFFIX,cpo.work
   - DOMAIN-SUFFIX,didomi.io
+  - DOMAIN-SUFFIX,music.126.net
+  - DOMAIN-SUFFIX,music.163.com
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
