--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -81,5 +81,6 @@ payload:
   - DOMAIN-SUFFIX,163yun.com
   - DOMAIN-SUFFIX,chinaz.com
   - DOMAIN-SUFFIX,juming.com
+  - DOMAIN-SUFFIX,netease.com
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
