--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -87,6 +87,7 @@ payload:
   - DOMAIN-SUFFIX,qcloud.com
   - DOMAIN-SUFFIX,myqcloud.com
   - DOMAIN-SUFFIX,reader.qq.com
+  - DOMAIN-SUFFIX,e.qq.com
   - DOMAIN-SUFFIX,easytomessage.com
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
