--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -91,6 +91,8 @@ payload:
   - DOMAIN-SUFFIX,myqcloud.com
   - DOMAIN-SUFFIX,reader.qq.com
   - DOMAIN-SUFFIX,e.qq.com
+  - DOMAIN-SUFFIX,book.qq.com
+  - DOMAIN-SUFFIX,tdos.qq.com
   - DOMAIN-SUFFIX,easytomessage.com
   - DOMAIN-SUFFIX,kuiniuca.com
   - DOMAIN-SUFFIX,xycdn.com
