--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -92,6 +92,7 @@ payload:
   - DOMAIN-SUFFIX,myqcloud.com
   - DOMAIN-SUFFIX,reader.qq.com
   - DOMAIN-SUFFIX,e.qq.com
+  - DOMAIN-SUFFIX,m.qq.com
   - DOMAIN-SUFFIX,book.qq.com
   - DOMAIN-SUFFIX,tdos.qq.com
   - DOMAIN-SUFFIX,easytomessage.com
@@ -105,5 +106,4 @@ payload:
   - DOMAIN-SUFFIX,kugou.net
   # 截断
   - DOMAIN,wap.stockstar.com
-  - DOMAIN,serveraddr.service.kugou.com
   - DOMAIN-SUFFIX,cn
