--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -1,11 +1,11 @@
 payload:
   # 内网直连
   - DOMAIN-SUFFIX,local
-  - IP-CIDR,192.168.0.0/16,no-resolve
-  - IP-CIDR,10.0.0.0/8,no-resolve
-  - IP-CIDR,172.16.0.0/12,no-resolve
-  - IP-CIDR,127.0.0.0/8,no-resolve
-  - IP-CIDR,100.64.0.0/10,no-resolve
+  -   - IP-CIDR,192.168.0.0/16,no-resolve
+  -   - IP-CIDR,10.0.0.0/8,no-resolve
+  -   - IP-CIDR,172.16.0.0/12,no-resolve
+  -   - IP-CIDR,127.0.0.0/8,no-resolve
+  -   - IP-CIDR,100.64.0.0/10,no-resolve
 # 其他直连
   - DOMAIN-KEYWORD,cctv
   - DOMAIN-KEYWORD,cntv
@@ -107,3 +107,23 @@ payload:
   # 截断
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
+
+  # 网易云音乐
+  - IP-CIDR,101.71.154.241/32,no-resolve
+  - IP-CIDR,103.126.92.132/31,no-resolve
+  - IP-CIDR,112.13.119.17/32,no-resolve
+  - IP-CIDR,112.13.119.18/32,no-resolve
+  - IP-CIDR,112.13.122.1/32,no-resolve
+  - IP-CIDR,112.13.122.4/32,no-resolve
+  - IP-CIDR,115.236.112.0/20,no-resolve
+  - IP-CIDR,118.24.63.156/32,no-resolve
+  - IP-CIDR,182.92.170.253/32,no-resolve
+  - IP-CIDR,193.112.159.225/32,no-resolve
+  - IP-CIDR,223.252.192.0/19,no-resolve
+  - IP-CIDR,39.105.175.128/32,no-resolve
+  - IP-CIDR,39.105.63.80/32,no-resolve
+  - IP-CIDR,45.254.48.1/32,no-resolve
+  - IP-CIDR,47.100.127.239/32,no-resolve
+  - IP-CIDR,59.111.128.0/17,no-resolve
+  - IP-CIDR,59.111.19.33/32,no-resolve
+  - IP-CIDR,59.111.21.14/31,no-resolve
