--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -1,11 +1,11 @@
 payload:
   # 内网直连
   - DOMAIN-SUFFIX,local
-  -   - IP-CIDR,192.168.0.0/16,no-resolve
-  -   - IP-CIDR,10.0.0.0/8,no-resolve
-  -   - IP-CIDR,172.16.0.0/12,no-resolve
-  -   - IP-CIDR,127.0.0.0/8,no-resolve
-  -   - IP-CIDR,100.64.0.0/10,no-resolve
+  - IP-CIDR,192.168.0.0/16,no-resolve
+  - IP-CIDR,10.0.0.0/8,no-resolve
+  - IP-CIDR,172.16.0.0/12,no-resolve
+  - IP-CIDR,127.0.0.0/8,no-resolve
+  - IP-CIDR,100.64.0.0/10,no-resolve
 # 其他直连
   - DOMAIN-KEYWORD,cctv
   - DOMAIN-KEYWORD,cntv
