--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -107,6 +107,7 @@ payload:
   - DOMAIN-SUFFIX,kgimg.com
   - DOMAIN-SUFFIX,kugou.net
   - DOMAIN-SUFFIX,kugouipv6.com
+  - DOMAIN-SUFFIX,chinacourt.org
   # 截断
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
