--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -73,6 +73,7 @@ payload:
   - DOMAIN-SUFFIX,cdnmg.com
   - DOMAIN-SUFFIX,kuangxiangit.com
   - DOMAIN-SUFFIX,umengcloud.com
+  - DOMAIN-SUFFIX,umeng.com
   - DOMAIN-SUFFIX,bankofchina.com
   - DOMAIN-SUFFIX,bocamchina.com
   - DOMAIN-SUFFIX,bank-of-china.com
