--- a/BannedList.yaml
+++ b/BannedList.yaml
@@ -3,7 +3,7 @@ payload:
   - DOMAIN-KEYWORD,rfi
   - DOMAIN-KEYWORD,wujie
   - DOMAIN-KEYWORD,pincong
-  - DOMAIN-KEYWORD,epochtimes
+  - DOMAIN-KEYWORD,epoch
   - DOMAIN-KEYWORD,bannedbook
   - DOMAIN-SUFFIX,falundafa.org
   - DOMAIN-SUFFIX,faluninfo.net
