--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -16,10 +16,10 @@ payload:
   - DOMAIN-KEYWORD,kglink
   - DOMAIN-KEYWORD,qidian
   - DOMAIN-KEYWORD,bili
+  - DOMAIN-KEYWORD,baike
   - DOMAIN-SUFFIX,alicdn.com
   - DOMAIN-SUFFIX,cnblogs.com
   - DOMAIN-SUFFIX,china-cba.net
-  - DOMAIN-SUFFIX,baidu.com
   - DOMAIN-SUFFIX,lancdn.com
   - DOMAIN-SUFFIX,douyin.com
   - DOMAIN-SUFFIX,eastmoney.com
@@ -115,61 +115,3 @@ payload:
   # 截断
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
-
-  # 网易云音乐
-  - IP-CIDR,101.71.154.241/32,no-resolve
-  - IP-CIDR,103.126.92.132/31,no-resolve
-  - IP-CIDR,112.13.119.17/32,no-resolve
-  - IP-CIDR,112.13.119.18/32,no-resolve
-  - IP-CIDR,112.13.122.1/32,no-resolve
-  - IP-CIDR,112.13.122.4/32,no-resolve
-  - IP-CIDR,115.236.112.0/20,no-resolve
-  - IP-CIDR,118.24.63.156/32,no-resolve
-  - IP-CIDR,182.92.170.253/32,no-resolve
-  - IP-CIDR,193.112.159.225/32,no-resolve
-  - IP-CIDR,223.252.192.0/19,no-resolve
-  - IP-CIDR,39.105.175.128/32,no-resolve
-  - IP-CIDR,39.105.63.80/32,no-resolve
-  - IP-CIDR,45.254.48.1/32,no-resolve
-  - IP-CIDR,47.100.127.239/32,no-resolve
-  - IP-CIDR,59.111.128.0/17,no-resolve
-  - IP-CIDR,59.111.19.33/32,no-resolve
-  - IP-CIDR,59.111.21.14/31,no-resolve
-
-  # 酷狗音乐
-  - IP-CIDR,49.7.0.0/16,no-resolve
-  - IP-CIDR,27.227.161.0/24,no-resolve
-  - IP-CIDR,116.211.94.0/24,no-resolve
-  - IP-CIDR,114.217.130.0/24,no-resolve
-  - IP-CIDR,124.228.180.0/24,no-resolve
-  - IP-CIDR,110.182.132.0/24,no-resolve
-  - IP-CIDR,56.63.45.0/24,no-resolve
-  - IP-CIDR,111.122.43.0/24,no-resolve
-  - IP-CIDR,58.214.211.0/24,no-resolve
-  - IP-CIDR,183.2.0.0/16,no-resolve
-  - IP-CIDR,183.47.30.0/24,no-resolve
-  - IP-CIDR,119.133.6.0/24,no-resolve
-  - IP-CIDR,106.6.185.0/24,no-resolve
-  - IP-CIDR,106.47.51.0/24,no-resolve
-  - IP-CIDR,125.65.107.0/24,no-resolve
-  - IP-CIDR,113.251.139.0/24,no-resolve
-  - IP-CIDR,116.26.137.0/24,no-resolve
-  - IP-CIDR,113.87.130.0/24,no-resolve
-  - IP-CIDR,61.143.193.0/24,no-resolve
-  - IP-CIDR,58.16.109.0/24,no-resolve
-  - IP-CIDR,110.245.102.0/24,no-resolve
-  - IP-CIDR,101.65.133.0/24,no-resolve
-  - IP-CIDR,122.139.233.0/24,no-resolve
-  - IP-CIDR,58.21.209.0/24,no-resolve
-  - IP-CIDR,117.24.24.0/24,no-resolve
-  - IP-CIDR,17.57.145.0/24,no-resolve
-  - IP-CIDR,112.67.249.0/24,no-resolve
-  - IP-CIDR,222.246.0.0/16,no-resolve
-  - IP-CIDR,222.87.166.0/24,no-resolve
-  - IP-CIDR,113.116.70.0/24,no-resolve
-  - IP-CIDR,113.110.4.0/24,no-resolve
-  - IP-CIDR,113.74.163.0/24,no-resolve
-  - IP-CIDR,144.52.50.0/24,no-resolve
-  - IP-CIDR,223.11.26.0/24,no-resolve
-  - IP-CIDR,175.8.240.0/24,no-resolve
-  - IP-CIDR,140.224.149.0/24,no-resolve
