--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -17,6 +17,9 @@ payload:
   - DOMAIN-KEYWORD,qidian
   - DOMAIN-KEYWORD,bili
   - DOMAIN-KEYWORD,baike
+  - DOMAIN-SUFFIX,bkssl.bdimg.com
+  - DOMAIN-SUFFIX,bkimg.cdn.bcebos.com
+  - DOMAIN-SUFFIX,baidu.com
   - DOMAIN-SUFFIX,alicdn.com
   - DOMAIN-SUFFIX,cnblogs.com
   - DOMAIN-SUFFIX,china-cba.net
