--- a/BannedList.yaml
+++ b/BannedList.yaml
@@ -25,3 +25,4 @@ payload:
   - DOMAIN-SUFFIX,fgmtv.org
   - DOMAIN-SUFFIX,creaders.net
   - DOMAIN-SUFFIX,chinaaffairs.org
+  - DOMAIN-SUFFIX,botanwang.com
