--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -122,6 +122,7 @@ payload:
   - DOMAIN-SUFFIX,tianyancha.com
   - DOMAIN-SUFFIX,qcc.com
   - DOMAIN-SUFFIX,qcckyc.com
+  - DOMAIN-SUFFIX,ultramobile.com
   # 截断
   - DOMAIN,wap.stockstar.com
   - DOMAIN-SUFFIX,cn
