--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -18,6 +18,8 @@ payload:
   - DOMAIN-KEYWORD,bili
   - DOMAIN-KEYWORD,baike
   - DOMAIN-KEYWORD,baidu
+  - DOMAIN-SUFFIX,xhscdn.com
+  - DOMAIN-SUFFIX,xiaohongshu.com
   - DOMAIN-SUFFIX,bdstatic.com
   - DOMAIN-SUFFIX,bdimg.com
   - DOMAIN-SUFFIX,bkssl.bdimg.com
