--- a/BannedList.yaml
+++ b/BannedList.yaml
@@ -26,3 +26,4 @@ payload:
   - DOMAIN-SUFFIX,creaders.net
   - DOMAIN-SUFFIX,chinaaffairs.org
   - DOMAIN-SUFFIX,botanwang.com
+  - DOMAIN-SUFFIX,truthsocial.com
