--- a/BannedList.yaml
+++ b/BannedList.yaml
@@ -27,3 +27,9 @@ payload:
   - DOMAIN-SUFFIX,chinaaffairs.org
   - DOMAIN-SUFFIX,botanwang.com
   - DOMAIN-SUFFIX,truthsocial.com
+  - DOMAIN-SUFFIX,tuidang.org
+  - DOMAIN-SUFFIX,msguancha.com
+  - DOMAIN-SUFFIX,sohcradio.com
+  - DOMAIN-SUFFIX,fanzei.net
+  - DOMAIN-SUFFIX,chinanewscenter.com
+  - DOMAIN-SUFFIX,huaglad.com
