--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -157,5 +157,7 @@ payload:
   - DOMAIN-SUFFIX,indexea.com
   - DOMAIN-SUFFIX,gitee.com
   - DOMAIN-SUFFIX,oschina.net
+  - DOMAIN-SUFFIX,fangpi.net
+  - DOMAIN-SUFFIX,bytedance.com
   # 截断
   - DOMAIN-SUFFIX,cn
