--- a/BannedList.yaml
+++ b/BannedList.yaml
@@ -33,3 +33,4 @@ payload:
   - DOMAIN-SUFFIX,fanzei.net
   - DOMAIN-SUFFIX,chinanewscenter.com
   - DOMAIN-SUFFIX,huaglad.com
+  - DOMAIN-SUFFIX,tankshanghai.com
