--- a/BannedList.yaml
+++ b/BannedList.yaml
@@ -34,3 +34,5 @@ payload:
   - DOMAIN-SUFFIX,chinanewscenter.com
   - DOMAIN-SUFFIX,huaglad.com
   - DOMAIN-SUFFIX,tankshanghai.com
+  - DOMAIN-SUFFIX,clearwisdom.net
+  - DOMAIN-SUFFIX,globalrescue.hopto.org
