--- a/DirectRules.yaml
+++ b/DirectRules.yaml
@@ -184,5 +184,6 @@ payload:
   - DOMAIN-SUFFIX,xhscdn.com
   - DOMAIN-SUFFIX,sanguosha.com
   - DOMAIN-SUFFIX,hzyoka.com
+  - DOMAIN-SUFFIX,kukutool.com
   # 截断
   - DOMAIN-SUFFIX,cn
